examples/calico-policy-services.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calico-system
