examples/calico-policy-agent.yaml
# Place this manifest in the kubelet config directory 
# on each of your Kubernetes master nodes.  The 
# pod will automatically be created by the kubelet.
apiVersion: v1
kind: Pod 
metadata:
  name: calico-policy-agent
  namespace: calico-system 
  labels:
    version: "latest"
    projectcalico.org/app: "policy-agent"
spec:
  hostNetwork: true
  containers:
    # The Calico policy agent.
    - name: k8s-policy-agent
      image: calico/k8s-policy-agent:latest
      imagePullPolicy: IfNotPresent 
    - name: leader-elector
      image: quay.io/calico/leader-elector:v0.1.0
      imagePullPolicy: IfNotPresent
      args:
        - "--election=calico-policy-election"
        - "--http=127.0.0.1:4040"
      ports:
        - containerPort: 4040
          protocol: TCP
